# HV

./: implementation_plan.md
sensai-backend/: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  WINDOWS_SETUP.md  codecov.yml  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.sh
sensai-backend/.cursor/rules/: cursor-rules-location.mdc  fastapi.mdc
sensai-backend/.github/workflows/: codecov.yml  deploy-only-prod.yml  deploy-only-staging.yml  deploy-prod.yml  deploy-staging.yml
sensai-backend/docs/: CONTRIBUTING.md  DEPLOYMENT.md  ENV.md  INSTALL.md
sensai-backend/src/: startup.py
sensai-backend/src/api/: .env.example  config.py  cron.py  llm.py  main.py  models.py  public.py  scheduler.py  settings.py  slack.py  todo  websockets.py
sensai-backend/src/api/bq/: base.py  chat.py  course.py  cron.py  org.py  task.py
sensai-backend/src/api/db/: __init__.py  analytics.py  batch.py  chat.py  code_draft.py  cohort.py  course.py  integration.py  migration.py  milestone.py  org.py  task.py  user.py  utils.py
sensai-backend/src/api/prompts/: __init__.py  assignment.py  doubt_solving.py  evaluator.py  objective_question.py  rewrite_query.py  router.py  subjective_question.py
sensai-backend/src/api/routes/: ai.py  audio.py  auth.py  batch.py  chat.py  code.py  cohort.py  course.py  (+10 more)
sensai-backend/tests/: conftest.py  test_startup.py
sensai-backend/tests/api/: test_config.py  test_cron.py  test_health_api.py  test_llm.py  test_main.py  test_models.py  test_public.py  test_scheduler.py  test_slack.py  test_startup.py
(+296 files in other folders)
